# tau

./: .gitignore  AGENTS.md  Cargo.toml  FEATURES.md  README.md  SECURITY.md  TODO-crate-tau-supervisor-review.md  TODO-notification-caching-notex.md  TODO-prompt-refactor.md  TODO.txt  flake.nix
.config/: nextest.toml
.github/: README.md
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: common.rs  lib.rs  openai.rs  responses.rs  tests.rs
crates/tau-agent/src/common/: tests.rs
crates/tau-agent/src/openai/: tests.rs
crates/tau-agent/src/responses/: pool.rs  tests.rs  ws.rs
crates/tau-blocking-notify-channel/: AGENTS.md  Cargo.toml  README.md  SECURITY.md
crates/tau-blocking-notify-channel/src/: lib.rs  tests.rs
crates/tau-cli-picker/: Cargo.toml  README.md
crates/tau-cli-picker/src/: error.rs  item.rs  key.rs  lib.rs  raw_mode.rs  tests.rs
crates/tau-cli-picker/src/key/: tests.rs
crates/tau-cli-term/: Cargo.toml  README.md
crates/tau-cli-term/src/: completion.rs  lib.rs  main.rs  resolve.rs  tests.rs
crates/tau-cli-term/src/completion/: render_tests.rs  tests.rs
crates/tau-cli-term/src/tests/: filesystem_token.rs  multi_arg_completion.rs  prompt_action_parse.rs  prompt_history_search.rs  trailer.rs
crates/tau-config/: ARCHITECTURE.md  Cargo.toml
crates/tau-config/config/: built-in.cli-bindings.json5  built-in.cli-bindings.yaml  built-in.cli.yaml  built-in.harness.yaml
crates/tau-config/src/: atomic.rs  lib.rs  settings.rs  tests.rs
crates/tau-config/src/atomic/: tests.rs
crates/tau-config/src/settings/: tests.rs
crates/tau-ext-email/: Cargo.toml  README.md
crates/tau-ext-email/src/: lib.rs  real_backend.rs  tests.rs
crates/tau-ext-email/src/prompts/: email_instructions.md  incoming_approval_open.txt
crates/tau-ext-pim/: Cargo.toml  README.md
crates/tau-ext-pim/config/: self-knowledge.harness.yaml
crates/tau-ext-pim/src/: lib.rs  storage.rs  tests.rs
crates/tau-ext-pim/src/calendar/: actions.rs  config.rs  google.rs  ics_feed.rs  mod.rs  runtime.rs  state.rs  tool.rs
crates/tau-ext-pim/src/calendar/ics_feed/: tests.rs
crates/tau-ext-pim/src/calendar/prompts/: calendar_instructions.md
crates/tau-ext-pim/src/calendar/runtime/: tests.rs
crates/tau-ext-pim/src/calendar/state/: tests.rs
crates/tau-ext-pim/src/calendar/tool/: tests.rs
crates/tau-ext-pim/src/email/: mod.rs  tests.rs
crates/tau-ext-provider-builtin/: Cargo.toml
crates/tau-ext-provider-builtin/src/: lib.rs  main.rs  openai_tests.rs  tests.rs
crates/tau-ext-shell/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-ext-shell/src/: agents.rs  config.rs  cwd_state.rs  diff.rs  dir_lock.rs  display.rs  isolation.rs  lib.rs  scheduler.rs  semaphore.rs  tests.rs  tools.rs  truncate.rs
crates/tau-ext-shell/src/diff/: tests.rs
crates/tau-ext-shell/src/dir_lock/: tests.rs
crates/tau-ext-shell/src/tools/: apply_patch.rs  cd.rs  edit.rs  find.rs  grep.rs  ls.rs  read.rs  shell.rs  world.rs  write.rs
crates/tau-ext-shell/src/tools/apply_patch/: tests.rs
crates/tau-ext-shell/src/tools/ls/: tests.rs
crates/tau-harness/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  design.md
crates/tau-harness/config/: built-in.extensions.json5
crates/tau-harness/prompts/: big.hbs  system.hbs
crates/tau-harness/src/: agent.rs  conversation.rs  daemon.rs  debug_log.rs  dedup.rs  discovery.rs  error.rs  event.rs  event_log.rs  extension.rs  format.rs  harness.rs  internal_tools.rs  lib.rs  model.rs  prompt.rs  runtime_dir.rs  secrets.rs  settings.rs  tool_turn.rs  turn.rs  version.rs
crates/tau-harness/src/agent/: tests.rs
crates/tau-harness/src/daemon/: tests.rs
crates/tau-harness/src/debug_log/: tests.rs
crates/tau-harness/src/dedup/: tests.rs
crates/tau-harness/src/event/: tests.rs
crates/tau-harness/src/event_log/: tests.rs
crates/tau-harness/src/extension/: tests.rs
crates/tau-harness/src/harness/: delegate_display_tests.rs  dispatch.rs  extension_data.rs  interception.rs  replay.rs  semantic_event_router.rs  semantic_event_router_tests.rs  skill_tool.rs  subagents_tool.rs  tests.rs
crates/tau-harness/src/harness/extension_data/: tests.rs
crates/tau-harness/src/harness/prompts/: delegate_prefix.md
crates/tau-harness/src/harness/subagents_tool/: tests.rs
crates/tau-harness/src/harness/tests/: action.rs  dedup.rs  dispatch.rs  format.rs  interception.rs  lifecycle.rs  mod.rs  mode.rs  model.rs  replay.rs  skill_tool.rs
crates/tau-harness/src/prompt/: tests.rs
crates/tau-harness/src/secrets/: tests.rs
crates/tau-harness/src/settings/: tests.rs
crates/tau-harness/src/tool_turn/: tests.rs
crates/tau-provider/: Cargo.toml
crates/tau-provider-chat-completions/: Cargo.toml
crates/tau-provider-chat-completions/src/: lib.rs  tests.rs
crates/tau-provider-chatgpt/: AGENTS.md  ARCHITECTURE.md  Cargo.toml
crates/tau-provider-chatgpt/src/: common.rs  lib.rs  responses.rs
crates/tau-provider-chatgpt/src/common/: tests.rs
crates/tau-provider-chatgpt/src/responses/: pool.rs  tests.rs  ws.rs  ws_runtime.rs
crates/tau-provider-chatgpt/src/responses/pool/: tests.rs
crates/tau-provider-cli/: Cargo.toml
crates/tau-provider-cli/src/: lib.rs  tests.rs
crates/tau-provider/src/: cli.rs  lib.rs  oauth.rs  resolver.rs  storage.rs
crates/tau-provider/src/cli/: tests.rs
crates/tau-provider/src/resolver/: tests.rs
crates/tau-socket/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  SECURITY.md
crates/tau-socket/src/: lib.rs  tests.rs
crates/tau-socket/tests/: daemon_attach.rs
crates/tau-supervisor/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
crates/tau-supervisor/src/: lib.rs
crates/tau-supervisor/tests/: supervisor.rs
crates/tau-term-screen/: Cargo.toml
crates/tau-term-screen/src/: screen.rs  style.rs
crates/tau-term-screen/src/screen/: tests.rs
crates/tau-themes/: Cargo.toml
crates/tau-themes/src/: names.rs  theme.rs
crates/tau-themes/src/theme/: tests.rs
crates/tau-themes/themes/: default.json5  dpc.json5  tau-dpc.json5  tau-light.json5  tau-plain-dark.json5  tau-plain-light.json5  tau.json5
(+167 files in other folders)
