[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-config.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
tracing.workspace = true
ureq.workspace = true
