[package]
name = "tau-blocking-notify-channel"
version.workspace = true
edition.workspace = true
description = "A small coalescing multi-producer, single-consumer blocking notification channel."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dev-dependencies]
static_assertions = "1.1"
