[package]
name = "tau-cli-picker"
description = "Synchronous single-select terminal list picker used by Tau CLIs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
crossterm.workspace = true
tau-term-screen.workspace = true
