[package]
name = "tau-cli-term"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossterm.workspace = true
tau-cli-term-raw.workspace = true
tau-themes.workspace = true
tempfile.workspace = true
tracing.workspace = true
