[package]
name = "tau-cli-term"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tau-cli-term-raw.workspace = true
tau-themes.workspace = true
tempfile.workspace = true
tracing.workspace = true
unicode-width.workspace = true
which.workspace = true

[dev-dependencies]
crossterm.workspace = true
