[package]
name = "tau-ext-email"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
globset.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
