[package]
name = "tau-ext-pim"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-imap.workspace = true
blake3.workspace = true
futures-util.workspace = true
globset.workspace = true
lettre.workspace = true
mail-parser.workspace = true
regex.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
time.workspace = true
time-tz.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
ureq.workspace = true
url.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
tempfile.workspace = true
