[package]
name = "tau-ext-provider-builtin"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backon.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
tau-provider-chat-completions.workspace = true
tau-provider-chatgpt.workspace = true
tracing.workspace = true
