[package]
name = "tau-ext-shell"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-extension.workspace = true
similar.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true

[dev-dependencies]
tempfile.workspace = true
