[package]
name = "tau-harness"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Exposes echo-agent test harness helpers (`run_daemon_with_echo`,
# `run_embedded_message_with_echo`). Enabled by tau-test-support and
# by this crate's own dev-dependencies for the internal test suite.
echo-agent = ["tau-agent/echo-agent"]

[dependencies]
bon.workspace = true
dirs.workspace = true
libc.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tau-agent.workspace = true
tau-config.workspace = true
tau-core.workspace = true
tau-ext-shell.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true
tau-socket.workspace = true
tau-supervisor.workspace = true
tracing.workspace = true

[build-dependencies]
built.workspace = true

[dev-dependencies]
tau-agent = { workspace = true, features = ["echo-agent"] }
