[package]
name = "tau-provider-chat-completions"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-config.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
tracing.workspace = true
ureq.workspace = true
