[package]
name = "tau-provider-chatgpt"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backon.workspace = true
base64.workspace = true
blake3.workspace = true
futures-util.workspace = true
lru.workspace = true
serde.workspace = true
serde_json.workspace = true
tau-config.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
tau-vcr.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ureq.workspace = true
uuid.workspace = true

[dev-dependencies]
tungstenite.workspace = true
