[package]
name = "tau-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64.workspace = true
dialoguer.workspace = true
tau-cli-picker.workspace = true
comfy-table.workspace = true
dirs.workspace = true
json5.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tau-config.workspace = true
url.workspace = true
ureq = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
