[package]
name = "tau-socket"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tau-proto.workspace = true

[dev-dependencies]
tau-test-support.workspace = true
tempfile.workspace = true
