[package]
name = "tau-term-screen"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
crossterm.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
vt100.workspace = true
