[package]
name = "tau-themes"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
json5 = { workspace = true }

[lints]
workspace = true
